--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        php: [8.1]
+        php: [7.3, 8.1]
 
     steps:
       - name: Checkout
