--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^8.1"
+    "php": "^7.3 || ^8.0"
   },
   "autoload": {
     "files": ["src/helpers.php"],
@@ -26,7 +26,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require-dev": {
-    "pestphp/pest": "^2.2",
+    "pestphp/pest": "^1.0",
     "ext-imagick": "*",
     "ext-gd": "*"
   },
