--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,10 @@
 name: Tests
 
-on: ['push', 'pull_request']
+on:
+  pull_request: ~
+  push:
+    branches:
+      - master
 
 jobs:
   ci:
@@ -8,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        php: [7.3, 7.4, 8.1, 8.2, 8.3]
+        php: [7.3, 7.4, 8.1, 8.2, 8.3, 8.4]
 
     steps:
       - name: Checkout
