--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
 
 
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest]
         php: [7.3, 7.4, 8.1, 8.2, 8.3, 8.4]
