--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,4 @@ jobs:
         run: composer update -W --dev --no-interaction --prefer-dist --optimize-autoloader
 
       - name: Run tests
-        run: ./vendor/bin/pest --display-deprecations
+        run: ./vendor/bin/pest ${{ matrix.php >= 8.1 && '--display-deprecations' || '' }}
