--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require-dev": {
-    "pestphp/pest": "^1.0",
+    "pestphp/pest": "^1.0|^2.0|^3.0",
     "ext-imagick": "*",
     "ext-gd": "*"
   },
