--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,14 @@ jobs:
         run: composer update -W --dev --no-interaction --prefer-dist --optimize-autoloader
 
       - name: Run tests
-        run: ./vendor/bin/pest ${{ matrix.php >= 8.1 && '--fail-on-deprecations' || '' }}
+        if: matrix.php <= 8.0
+        run: ./vendor/bin/pest --ci --fail-on-deprecation
+
+      - name: Run tests
+        if: matrix.php >= 8.1 && matrix.php <= 8.2
+        run: ./vendor/bin/pest --ci --display-deprecations
+
+      - name: Run tests
+        if: matrix.php >= 8.3
+        run: ./vendor/bin/pest --ci --fail-on-deprecation
+
