--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Run tests
         if: matrix.php <= 8.0
-        run: ./vendor/bin/pest --ci --fail-on-deprecation
+        run: ./vendor/bin/pest --ci
 
       - name: Run tests
         if: matrix.php >= 8.1 && matrix.php <= 8.2
