--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 name: Tests
 
 on:
-  pull_request:
   push:
-    branches:
-      - master
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   ci:
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        php: [7.3, 7.4, 8.1, 8.2, 8.3, 8.4]
+        php: [7.3, 7.4, 8.1, 8.2, 8.3, 8.4, 8.5]
 
     steps:
       - name: Checkout
@@ -32,4 +32,14 @@ jobs:
         run: composer update -W --dev --no-interaction --prefer-dist --optimize-autoloader
 
       - name: Run tests
-        run: ./vendor/bin/pest ${{ matrix.php >= 8.1 && '--display-deprecations' || '' }}
+        if: matrix.php <= 8.0
+        run: ./vendor/bin/pest --ci
+
+      - name: Run tests
+        if: matrix.php >= 8.1 && matrix.php <= 8.2
+        run: ./vendor/bin/pest --ci --display-deprecations
+
+      - name: Run tests
+        if: matrix.php >= 8.3
+        run: ./vendor/bin/pest --ci --fail-on-deprecation
+
